# split_operator

./: .gitignore  Cargo.toml
benches/: dispatch.rs  fft_lane.rs  lane_map.rs
split_op/: Cargo.toml  pyproject.toml  tests.ipynb
split_op/src/: lib.rs
src/: border_dumping.rs  change_observer.rs  control.rs  grid.rs  hamiltonian_factory.rs  leak_control.rs  lib.rs  loss_checker.rs  loss_saver.rs  ne_ocs_propagation.rs  potential_reader.rs  potential_saver.py  propagation.rs  propagator.rs  saver.rs  special_functions.rs  time_grid.rs  wave_function.rs  wave_function_saver.rs
src/hamiltonian_factory/: analytic_potentials.rs  hamiltonian_broadcasting.rs  kinetic_operator.rs  legendre_diagonalization.rs  rotational_operator.rs
src/propagator/: diagonalization.rs  fft_diagonalization.rs  fft_transformation.rs  matrix_diagonalization.rs  matrix_transformation.rs  n_dim_propagator.rs  non_diagonal_propagator.rs  one_dim_propagator.rs  propagator_factory.rs  state_matrix_transformation.rs  transformation.rs
tests/: fft_tests.rs  free_wave.rs  ground_state_tests.rs  harmonic_tests.rs  harmonic_trap.rs  test_plots.ipynb
tests/test_data/: free_momentum.npy  free_momentum_momentum_grid.npy  free_wave.npy  free_wave_space_grid.npy  free_wave_time.npy  harmonic.npy  harmonic_imaginary.npy  harmonic_potential.npy  harmonic_space_grid.npy  harmonic_time.npy  lj_ground_space.npy  lj_ground_space_potential.npy  lj_ground_space_space_grid.npy  lj_ground_space_time.npy
