[package]
name = "split_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantum = { git = "https://github.com/Wleter/quantum" }
num = "*"
rustfft = "*"
criterion = "*"
ndarray-npy = "*"
gauss-quad = "0.1.9"
rayon = "*"
ndarray = { version = "*", features = ["rayon", "matrixmultiply-threading"] }
enum-flags = "*"

[profile.test]
opt-level = 3

[[bench]]
name = "lane_map"
harness = false

[[bench]]
name = "fft_lane"
harness = false