[package]
name = "split_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantum = { git = "https://github.com/Wleter/quantum" }
num = "0.4.3"
rustfft = "6.2.0"
ndarray-npy = "0.9.1"
rayon = "1.10.0"
ndarray = { version = "0.16.1", features = ["rayon", "matrixmultiply-threading"] }
enum-flags = "0.3.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.test]
opt-level = 3

[[bench]]
name = "lane_map"
harness = false

[[bench]]
name = "fft_lane"
harness = false