[package]
name = "split_op"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "split_op"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
split_operator = { git = "https://github.com/Wleter/split_operator", branch = "dynamic_arrays"}
